# mq-http-cpp-sdk

./: .gitignore  BUILD.bazel  README.md  SConstruct  WORKSPACE
.github/workflows/: main.yaml
bazel/: curl.bzl  deps.bzl
include/mq_http_sdk/: constants.h  mq_common_tool.h  mq_exception.h  mq_utils.h
lib/windows/I386/: libcurl.lib  ssleay32MT.lib  ssleay32MTd.lib
src/: SConscript  constants.h  mq_client.cpp  mq_client.h  mq_common_tool.cpp  mq_common_tool.h  mq_exception.cpp  mq_network_tool.cpp  mq_network_tool.h  mq_protocol.cpp  mq_protocol.h  mq_utils.cpp  mq_utils.h
src/openssl-win64/openssl/: opensslconf.h
